# kube-watcher

./: .gitignore  Dockerfile  README.md  generate_token.sh  kube_deployment.yaml  output.json  pyproject.toml  test_api.py
.github/workflows/: release.yml
.guthub/workflows/: release.yml
app/: anvil_core.py  cost_core.py  deployment_template.yaml  kube_core.py  models.py  prometheus_core.py  ray_deployment_template.yaml  server.py  utils.py
charts/: Chart.yaml  values.yaml
charts/templates/: cluster_role.yaml  cluster_role_binding.yaml  deployment.yaml  service.yaml  service_account.yaml
deployments/: agent_builder_template.yaml  flow_deployment_template.yaml  kube_deployment.yaml
examples/: parser_test.py
kube_watcher/: api.py  client.py  cost_core.py  jobs.py  kube_api.py  kube_core.py  models.py  prometheus_api.py  prometheus_core.py  ray_cluster.py  request.py  server.py  utils.py
templates/: .gitignore  README.md
templates/akash/: Dockerfile  README.md  example.yaml  template.yaml  test.yaml  values.yaml
templates/aphrodite/: Dockerfile_cuda  Dockerfile_rocm  metadata.json  run_model.sh  template.yaml  values.yaml
templates/axolotl/: Dockerfile  README.md  fine_tune.py  inference.py  metadata.json  run_training.sh  template.yaml  values.yaml
templates/boinc/: metadata.json  template.yaml  values.yaml
templates/comfyui/: Dockerfile  README.md  example.yaml  qwen_2_images.json  template.yaml  values.yaml
templates/diffusers/: API_DOCUMENTATION.md  Dockerfile  README.md  inference_test.py  local_deploy.py  metadata.json  ray_deploy.py  ray_inference.py  requirements.txt  run_model.sh  template.yaml  test_openai_api.py  values.yaml
templates/diffusion/: Dockerfile  README.md  download_model.py  example.yaml  template.yaml  values.yaml
templates/dummy/: template.yaml  values.yaml
templates/flexible/: example.yaml  metadata.json  template.yaml  values.yaml
templates/flowise/: README.md  metadata.json  template.yaml  values.yaml
templates/gpustack/: README.md  cluster_role.yaml  example.yaml  k8s.yaml  metadata.json  template.yaml  template_v2.yaml  values.yaml
templates/https/: README.md  default.ssl.conf.erb  metadata.json  template.yaml  values.yaml
templates/inference/: README.md  demo.yaml  example.yaml  llm-example.yaml  template.yaml  values.yaml
templates/kalavai/: README.md  example.yaml  template.yaml  values.yaml
templates/langfuse/: metadata.json  template.yaml  values.yaml
templates/litellm/: Dockerfile  config.yaml  metadata.json  template.yaml  values.yaml
templates/llamacpp/: Dockerfile  Dockerfile_cuda  Dockerfile_rocm  INFO.md  build.sh  generate_config.py  metadata.json  run_api_server.sh  template.yaml  values.yaml
templates/n8n/: README.md  metadata.json  template.yaml  values.yaml
templates/petals/: metadata.json  template.yaml  values.yaml
templates/playground/: metadata.json  template.yaml  values.yaml
templates/pool/: example.yaml  metadata.json  template.yaml  test.yaml  values.yaml
templates/quants/: LLMCOMPRESSOR.md  README.md  (+4 more)
(+74 files in other folders)
